--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
   background: url(Image/pexels-pixabay-355887.jpg) no-repeat;
   background-size: cover;
   background-position: center;
+  overflow: hidden;
+  color: white;
 }
 
 .header {
@@ -26,7 +28,7 @@ body {
 }
 
 .name {
-  font-size: 40px;
+  font-size: 55px;
   color: white;
   text-decoration: none;
   font-weight: 700;
@@ -34,11 +36,11 @@ body {
 
 .navbar a {
   position: relative;
-  font-size: 20px;
+  font-size: 22px;
   color: white;
   font-weight: 500;
   text-decoration: none;
-  margin-left: 20px;
+  margin-left: 23px;
 }
 
 .navbar a::before {
@@ -47,6 +49,64 @@ body {
   top: 100%;
   left: 0;
   width: 100%;
-  height: 2px;
+  height: 3px;
   background: white;
+}
+
+.navbar a:hover {
+  color: rgb(157, 157, 221);
+}
+
+.home {
+  height: 50vh;
+  display: flex;
+  align-items: center;
+  padding: 0 8%;
+}
+
+.home-content {
+  max-width: 700px;
+}
+
+.home-content h1 {
+  font-size: 50px;
+  font-weight: 700;
+}
+
+.home-content h2 {
+  font-size: 32px;
+  font-weight: 700;
+  color: rgb(157, 157, 221);
+}
+
+.home-content p {
+  font-size: 18px;
+  margin-right: 100px;
+  margin-top: 20px;
+}
+
+.bot-links {
+  position: absolute;
+  bottom: 40px;
+  width: 170px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.bot-links a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+  height: 60px;
+  background: transparent;
+  border: 2px solid white;
+  border-radius: 50%;
+  font-size: 35px;
+  color: white;
+  text-decoration: none;
+}
+
+.bot-links a:hover {
+  color: rgb(157, 157, 221);
 }
