--- a/style.css
+++ b/style.css
@@ -236,3 +236,50 @@ section {
   margin-bottom: 15px;
   margin-left: 30px;
 }
+
+/* PORTFOLIO PAGE */
+
+.portfolio {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 0%;
+  height: 80%;
+  width: 80%;
+  margin-top: 150px;
+  margin-left: 150px;
+}
+
+.project-1,
+.project-2,
+.project-3,
+.project-4 {
+  margin: 10px;
+  height: 400px;
+  width: 350px;
+}
+
+.btn-2 {
+  margin-top: 20px;
+}
+
+.btn-2 a {
+  text-decoration: none;
+  color: white;
+}
+
+.project-btn {
+  font-size: 18px;
+  padding: 0.2em 1em;
+  margin: 0.25em;
+  border-radius: 1em;
+  border: none;
+  outline: none;
+  background: rgb(157, 157, 221);
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.project-btn:hover {
+  background: gray;
+}
