--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ body {
   left: 0;
   width: 100%;
   padding: 5px 100px;
-  background: transparent;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -70,11 +69,8 @@ body {
 
 /* Home */
 
-section {
-  padding: 0 15%;
-}
-
 .home {
+  padding: 25% 15%;
   position: relative;
   width: 100%;
   height: 70vh;
@@ -133,6 +129,7 @@ section {
 /* Quote */
 
 .quote {
+  padding: 0% 15%;
   text-align: center;
   font-size: 25px;
   margin-left: 70px;
@@ -175,8 +172,9 @@ section {
 /* ABOUT PAGE */
 
 .about {
+  padding: 0 15%;
   height: 80vh;
-  margin-top: 120px;
+  margin-top: 200px;
   margin-bottom: 15%;
   margin-left: 5%;
   margin-right: 5%;
@@ -243,10 +241,10 @@ section {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 0%;
+  padding: 0 5%;
   height: 80%;
   width: 80%;
-  margin-top: 150px;
+  margin-top: 200px;
   margin-left: 150px;
 }
 
