--- a/style.css
+++ b/style.css
@@ -281,3 +281,71 @@ body {
 .project-btn:hover {
   background: gray;
 }
+
+/* Contact Page */
+
+.contact {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-title {
+  display: flex;
+  justify-content: center;
+  margin-top: 12%;
+  margin-bottom: 3%;
+  font-size: 30px;
+}
+
+.contact-form {
+  /* margin-top: 20%;
+  margin-left: 40%; */
+  display: inline-flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 350px;
+}
+
+.name-input {
+  border-radius: 10px;
+  margin: 10px;
+  height: 35px;
+  width: 250px;
+}
+
+.email-inputa {
+  border-radius: 10px;
+  margin: 10px;
+  height: 35px;
+  width: 250px;
+}
+
+.email-input {
+  border-radius: 10px;
+  margin: 10px;
+  width: 350px;
+}
+.send-input {
+  border-radius: 10px;
+  margin: 10px;
+  height: 35px;
+  width: 80px;
+  font-size: 20px;
+}
+
+.coding-1 img {
+  height: 350px;
+  width: 350px;
+  margin: 20px;
+  border-radius: 20px;
+}
+
+.coding-2 img {
+  height: 350px;
+  width: 350px;
+  margin: 20px;
+  border-radius: 20px;
+}
