--- a/style.css
+++ b/style.css
@@ -329,11 +329,14 @@ body {
   width: 350px;
 }
 .send-input {
-  border-radius: 10px;
+  border-radius: 20px;
+  border: none;
   margin: 10px;
   height: 35px;
   width: 80px;
   font-size: 20px;
+  cursor: pointer;
+  background: rgb(157, 157, 221);
 }
 
 .coding-1 img {
@@ -348,4 +351,46 @@ body {
   width: 350px;
   margin: 20px;
   border-radius: 20px;
+}
+
+/* CONFIRMATION PAGE */
+
+.confirmation-page {
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.confirmation-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.confirmation-text h2 {
+  font-size: 40px;
+}
+
+.confirmation-text p {
+  font-size: 20px;
+}
+
+.confirmation-button {
+  margin-top: 20px;
+  display: flex;
+  height: 35px;
+}
+
+.con-btn {
+  display: flex;
+  justify-content: center;
+  width: 100px;
+  font-size: 20px;
+  border-radius: 25px;
+  text-decoration: none;
+  border: none;
+  cursor: pointer;
+  background: rgb(157, 157, 221);
 }
